Fix scrollbar position

--- a/src/index.scss
+++ b/src/index.scss
@@ -22,7 +22,7 @@ main {
 .calendar {
   min-height: 155px;
   margin-bottom: 30px;
-  padding: 30px 0 15px;
+  padding-top: 30px;
   overflow-x: hidden;
 }
 
